# CodeAnalyser

./: CMakeLists.txt  README.md  main.cpp
include/: analyse.hpp  cmd_options.hpp  file.hpp  function.hpp  metric.hpp  metric_accumulator.hpp  metric_accumulator_formatter.hpp  utils.hpp
include/metric_accumulator_impl/: accumulators.hpp  average_accumulator.hpp  categorical_accumulator.hpp  sum_average_accumulator.hpp
include/metric_impl/: code_lines_count.hpp  cyclomatic_complexity.hpp  metrics.hpp  naming_style.hpp  parameters_count.hpp
src/: CMakeLists.txt  cmd_options.cpp  file.cpp  function.cpp  metric.cpp  metric_accumulator.cpp
src/analyse/: CMakeLists.txt
src/analyse/tests/: analyse.cpp
src/analyse/tests/files/: advanced_processor.py  advanced_processor_1.py  advanced_processor_func.py
src/cmd_options/: CMakeLists.txt
src/cmd_options/tests/: cmd_options.cpp
src/metric_accumulator_impl/: CMakeLists.txt  average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_accumulator_impl/tests/: average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_impl/: CMakeLists.txt  code_lines_count.cpp  cyclomatic_complexity.cpp  naming_style.cpp  parameters_count.cpp
src/metric_impl/tests/: code_lines_count.cpp  cyclomatic_complexity.cpp  naming_style.cpp  parameters_count.cpp
src/metric_impl/tests/files/: advanced_processor.py  comments.py  exceptions.py  if.py  loops.py  many_lines.py  many_parameters.py  match_case.py  nested_if.py  simple.py  ternary.py
